--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -26,7 +26,7 @@ h1 {
 #Search_Bar {
     color: rgb(0, 0, 0);
     width: 85%;
-    max-width: 400%;
+    max-width: 90%;
     padding: 10px;
     font-size: 1rem;
     border: 2px solid #000000;
@@ -50,4 +50,32 @@ h1 {
     width: 16px; 
     height: 16px; 
     margin-right: 4px;
+}
+
+#Result_list {
+    background-color: rgb(35, 35, 35);
+    text-align: left;
+    position: absolute;
+    border: 1px solid #ccc;
+    border-top: none;
+    z-index: 1000;
+    max-height: 200px;
+    overflow-y: auto;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 4px 8px rgba(104, 26, 100, 0.5);
+}
+
+.dropdown::-webkit-scrollbar {
+    margin-left: 4%;
+    padding: 10px;
+    position: absolute;
+    border: 1px solid rgb(0, 0, 0);
+    max-height: 600px;
+    overflow-y: auto;
+    width: 75%;
+    z-index: 100;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
 }
