--- a/frontend/assets/details_page.css
+++ b/frontend/assets/details_page.css
@@ -3,6 +3,8 @@
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     padding: 8px 10px;
+    border-radius: 6px;
+    align-items: center;
 }
 #top_div {
     display: flex;
@@ -10,8 +12,8 @@
     align-items: top;
     background-color:rgb(30, 30, 30) ;
     border: 2px solid rgb(56, 54, 54);
+    border-radius: 8px;
     box-shadow: none;
-    border-radius: 0px;
     margin-top: 6px;
 }
 #Detail_image {
@@ -31,4 +33,80 @@
     align-items: top;
     gap: 20px;
     color: white;
+    border-radius: 6px;
+    padding-left: 6px;
+}
+
+#Description_div {
+    margin-top: 6px;
+    background-color:rgb(40, 40, 40);
+    color: white;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+#Friends_div{
+    display: flex;
+    background-color: rgb(40, 40, 40);
+    margin-left: 6px;
+    color: white;
+    padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 6px;
+    flex-direction: column;
+    justify-items: center;
+}
+
+.Friend_card{
+    display: flex;
+    justify-content: left;
+    background-color:rgb(30, 30, 30);
+    border-radius: 6px;
+    align-items: center;
+    padding-right: 10px;
+    height: 60px;
+    margin-bottom: 8px;
+    transition: background-color 0.10s;
+} 
+
+.Friend_card:hover{
+    cursor: pointer;
+    background-color:rgb(32, 32, 32);
+    box-shadow: 3px 3px 3px rgb(35, 35, 35);
+}
+
+.Friend_card:active{
+    background-color: rgb(28, 28, 28);
+    box-shadow: none;
+}
+
+.PFP{
+    height: 60;
+    width: auto;
+    margin-right: 6px;
+    border-top-left-radius: 6px ;
+    border-bottom-left-radius: 6px;
+}
+
+.Feeling_icon{
+    height: 30;
+    width: auto;
+    margin-right: 6px;
+}
+
+#show_more_friends_button{
+    border-radius: 6px;
+    background-color: rgb(147, 78, 213);
+    border: 2px solid rgb(30, 30, 30);
+    font-size: 18px;
+    font-weight: 900;
+    transition: background-color 0.10s, box-shadow 0.10s;
+}
+#show_more_friends_button:hover{
+    cursor: pointer;
+    box-shadow: 3px 3px 3px rgba(104, 26, 100, 0.5);
+}
+
+#show_more_friends_button:active{
+    background-color: rgb(147, 78, 240);
 }
