made minor frontend changes

--- a/frontend/stylesheets/details_page.css
+++ b/frontend/stylesheets/details_page.css
@@ -92,6 +92,11 @@
     height: 30;
     width: auto;
     margin-right: 6px;
+    transition: padding 0.10s;
+}
+.Feeling_icon:hover{
+    padding-left: 6px;
+    padding-right: 6px;
 }
 
 #show_more_friends_button{
