--- a/frontend/stylesheets/search_page.css
+++ b/frontend/stylesheets/search_page.css
@@ -4,7 +4,7 @@ body{
 }
 
 #body_search {
-    padding: 80px;
+    padding-top: 80px;
 }
 
 #header_div_search{
@@ -167,6 +167,28 @@ body{
     font-size: large;
 }
 
+
 #Scrolling_suggestion_search{
-    
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    scrollbar-width: none;
+}
+
+.scroll_item_wrapper{
+    width: 100%;
+    height: auto;
+    scroll-snap-align: start;
+    flex: 0 0 auto;
+    object-fit: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Scrollable_images_search{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    border-radius: 6px;
 }
