--- a/frontend/stylesheets/login_page.css
+++ b/frontend/stylesheets/login_page.css
@@ -59,3 +59,29 @@
     text-decoration: underline;
     cursor: pointer;
 }
+@keyframes fadeIn{
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeOut{
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+.modal_overlay_search{
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    
+} 
+.modal_overlay_search.fade-in{
+    animation: fadeIn 0.3s ease forwards;
+}
+
+.modal_overlay_search.fade-out{
+    animation: fadeOut 0.3s ease forwards;
+}
