--- a/frontend/stylesheets/details_page.css
+++ b/frontend/stylesheets/details_page.css
@@ -190,3 +190,42 @@
     word-wrap: break-word; 
     overflow: hidden;
 }
+#popup_anime_overlay{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.5);
+    inset: 0; /*shorthand for top, left, bottom, right = 0*/
+    z-index: 999;/*makes sure its on top*/
+}
+#popup_anime_div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: rgb(40, 40, 40);
+    border-radius: 12px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: white;
+    text-align: center;;
+}
+
+#popup_buttons_div{
+    display: flex;
+    gap: 6px;
+}
+
+#Try_again_popup{
+    color: rgb(7, 88, 174);
+    text-align: center;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 6px;
+    padding: 10px;
+    background-color: white;
+    transition: box-shadow 0.10s;
+}
